--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <div class="row d-flex align-items-center bg-primary">
-                            <div class="col-7 p-5">
+                        <div class="row d-flex align-items-center bg-primary p-5">
+                            <div class="col-7">
                                 <h1>Cool Dude Headphone</h1>
                                 <p>This is the best headphone in the world for people who just want to waste time in
                                     front of funky world.</p>
@@ -68,8 +68,8 @@
 
                     </div>
                     <div class="carousel-item">
-                        <div class="row d-flex align-items-center bg-primary">
-                            <div class="col-7 p-5">
+                        <div class="row d-flex align-items-center bg-primary p-5">
+                            <div class="col-7">
                                 <h1>Cool Dude Headphone</h1>
                                 <p>This is the best headphone in the world for people who just want to waste time in
                                     front of funky world.</p>
@@ -82,8 +82,8 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <div class="row d-flex align-items-center bg-primary">
-                            <div class="col-7 p-5">
+                        <div class="row d-flex align-items-center bg-primary p-5">
+                            <div class="col-7">
                                 <h1>Cool Dude Headphone</h1>
                                 <p>This is the best headphone in the world for people who just want to waste time in
                                     front of funky world.</p>
@@ -110,7 +110,29 @@
         </section>
     </header>
     <main>
-
+        <!-- Catergories Section -->
+        <section class="container my-5">
+            <div class="row g-4">
+                <div class="col-lg-4 col-md-6 col-12">
+                    <div class="p-3 border bg-warning d-flex align-items-center justify-content-between rounded-3">
+                        <h1 class="text-white">Watch</h1>
+                        <img src="images/categories/watch.png" alt="">
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-12">
+                    <div class="p-3 border bg-info d-flex align-items-center justify-content-between rounded-3">
+                        <h1 class="text-white">Shoes</h1>
+                        <img src="images/categories/shoes.png" alt="">
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-12">
+                    <div class="p-3 border bg-primary d-flex align-items-center justify-content-between rounded-3">
+                        <h1 class="text-white">Bagpack</h1>
+                        <img src="images/categories/bag.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
