--- a/index.html
+++ b/index.html
@@ -110,7 +110,9 @@
         </section>
     </header>
     <main>
+
         <!-- Catergories Section -->
+
         <section class="container my-5">
             <div class="row g-4">
                 <div class="col-lg-4 col-md-6 col-12">
@@ -131,6 +133,53 @@
                         <img src="images/categories/bag.png" alt="">
                     </div>
                 </div>
+            </div>
+        </section>
+
+        <!-- SHOES CARD STYLE -->
+
+        <section class="container my-5">
+            <h2>Shoes</h2>
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Suply 350</h5>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
+                                to additional content. This content is a little bit longer.</p>
+                        </div>
+                        <div>
+                            <a href="#" class="btn btn-warning m-3">Buy Now</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Nike 360</h5>
+                            <p class="card-text">This is a short card.</p>
+                        </div>
+                        <div>
+                            <a href="#" class="btn btn-warning m-3">Buy Now</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Red Airmax</h5>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
+                                to additional content.</p>
+                        </div>
+                        <div>
+                            <a href="#" class="btn btn-warning m-3">Buy Now</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
             </div>
         </section>
     </main>
