--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link active" aria-current="page" href="#home">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Shoes</a>
+                            <a class="nav-link" href="#shoes">Shoes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Backpack</a>
+                            <a class="nav-link" href="#bags">Backpack</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Subscribe</a>
+                            <a class="nav-link" href="#subscribe">Subscribe</a>
                         </li>
                 </div>
             </div>
@@ -113,7 +113,7 @@
 
         <!-- Catergories Section -->
 
-        <section class="container my-5">
+        <section class="container my-5" id="home">
             <div class="row g-4">
                 <div class="col-lg-4 col-md-6 col-12">
                     <div class="p-3 border bg-warning d-flex align-items-center justify-content-between rounded-3">
@@ -138,11 +138,11 @@
 
         <!-- SHOES CARD STYLE -->
 
-        <section class="container my-5">
+        <section class="container my-5" id="shoes">
             <h2>Shoes</h2>
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                 <div class="col">
-                    <div class="card h-100">
+                    <div class="card border border-0 shadow h-100">
                         <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Suply 350</h5>
@@ -155,7 +155,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card h-100">
+                    <div class="card border border-0 shadow h-100">
                         <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Nike 360</h5>
@@ -167,12 +167,13 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card h-100">
+                    <div class="card border border-0 shadow h-100">
                         <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Red Airmax</h5>
                             <p class="card-text">This is a longer card with supporting text below as a natural lead-in
-                                to additional content.</p>
+                                to additional content.
+                            </p>
                         </div>
                         <div>
                             <a href="#" class="btn btn-warning m-3">Buy Now</a>
@@ -180,6 +181,61 @@
                     </div>
                 </div>
             </div>
+        </section>
+
+        <!-- Bags Card section -->
+        <section class="container my-5" id="bags">
+            <h2>Backpacks</h2>
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+                <div class="col">
+                    <div class="card border border-0 shadow h-100">
+                        <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Lal Laltu Bag</h5>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
+                                to additional content. This content is a little bit longer.</p>
+                        </div>
+                        <div>
+                            <a href="#" class="btn btn-warning m-3">Buy Now</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card border border-0 shadow h-100">
+                        <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Blue Niltu Bag</h5>
+                            <p class="card-text">This is a short card.</p>
+                        </div>
+                        <div>
+                            <a href="#" class="btn btn-warning m-3">Buy Now</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card border border-0 shadow h-100">
+                        <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Black Kaltu Bag</h5>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
+                                to additional content.
+                            </p>
+                        </div>
+                        <div>
+                            <a href="#" class="btn btn-warning m-3">Buy Now</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section
+            class="container my-5 p-5 rounded-3 text-center text-white bg-info d-flex justify-content-center align-items-center"
+            id="subscribe">
+            <div>
+                <h3>Let's Stay in Touch</h3>
+                <p>Get updates on sales, specials and more</p>
+                <input type="email" placeholder="Your E-mail" class="form-control">
+                <button type="submit" class="btn btn-danger">Submit</button>
             </div>
         </section>
     </main>
