--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <!-- Link Bootstrap Style -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+    <!-- Link css style sheet -->
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -53,7 +56,7 @@
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <div class="row d-flex align-items-center bg-primary p-5">
+                        <div class="row d-flex align-items-center bg-clr-primary p-5">
                             <div class="col-7">
                                 <h1>Cool Dude Headphone</h1>
                                 <p>This is the best headphone in the world for people who just want to waste time in
@@ -68,7 +71,7 @@
 
                     </div>
                     <div class="carousel-item">
-                        <div class="row d-flex align-items-center bg-primary p-5">
+                        <div class="row d-flex align-items-center bg-clr-primary p-5">
                             <div class="col-7">
                                 <h1>Cool Dude Headphone</h1>
                                 <p>This is the best headphone in the world for people who just want to waste time in
@@ -82,7 +85,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <div class="row d-flex align-items-center bg-primary p-5">
+                        <div class="row d-flex align-items-center bg-clr-primary p-5">
                             <div class="col-7">
                                 <h1>Cool Dude Headphone</h1>
                                 <p>This is the best headphone in the world for people who just want to waste time in
@@ -229,19 +232,21 @@
             </div>
         </section>
         <section
-            class="container my-5 p-5 rounded-3 text-center text-white bg-info d-flex justify-content-center align-items-center"
+            class="container my-5 p-5 rounded-3 text-center bg-clr-primary d-flex justify-content-center align-items-center"
             id="subscribe">
             <div>
                 <h3>Let's Stay in Touch</h3>
                 <p>Get updates on sales, specials and more</p>
                 <input type="email" placeholder="Your E-mail" class="form-control">
+                <br>
                 <button type="submit" class="btn btn-danger">Submit</button>
             </div>
         </section>
     </main>
-    <footer>
-
+    <footer class="bg-dark p-5">
+        <p class="text-center text-white"> <small>&copy;2021 a demo creation by Md. Ruhul Amin Khan</small></p>
     </footer>
+
     <!-- Link Bootstrap Java Script -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
